new buttons, some tag corrections

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 				<p class ="startGameText">
 					click the button below to start the game. Good Luck.
 				</p>
-				<button id ="btnNewGame" value ="Start Game">Start Game</button>
+				<button id ="btnNewGame" value ="Start Game"></button>
 
 
 			
